# nhl-fantasy-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  locustfile.py  pyproject.toml
.github/workflows/: ci.yml
apps/core/: admin.py  middleware.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/core/management/commands/: ingest_games.py  score_games.py  setup_schedule.py
apps/core/migrations/: 0001_initial.py  0002_goaliescoringrule_skaterscoringrule_and_more.py  0003_seed_scoring_rules.py  0004_pipelinecontrol.py
apps/core/services/: cache_utils.py  ingestion.py  nhl_client.py  scoring.py
apps/core/templates/admin/core/: pipeline_control.html
apps/core/tests/: helpers.py  test_e2e.py  test_leaderboard_api.py  test_player_stats_api.py  test_scoring.py
config/: celery.py  settings.py
docs/: business-logic.md
docs/sample-api-data/: boxscore.json  endpoints.md  player.json  roster.json  schedule.json
