[project]
name = "nhl-fantasy-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.3",
    "django>=6.0.6",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "gunicorn>=26.0.0",
    "numpy>=2.4.6",
    "psycopg2-binary>=2.9.12",
    "python-json-logger>=4.1.0",
    "requests>=2.34.2",
    "sentry-sdk[django]>=2.61.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "locust>=2.44.1",
]
